--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -7,6 +7,7 @@
     "com.unity.ide.vscode": "1.2.5",
     "com.unity.polybrush": "1.1.8",
     "com.unity.probuilder": "5.2.3",
+    "com.unity.progrids": "3.0.3-preview.6",
     "com.unity.render-pipelines.universal": "12.1.13",
     "com.unity.test-framework": "1.1.33",
     "com.unity.textmeshpro": "3.0.6",
