--- a/ProjectSettings/Packages/com.unity.polybrush/Settings.json
+++ b/ProjectSettings/Packages/com.unity.polybrush/Settings.json
@@ -52,6 +52,11 @@
                 "value": "{\"m_Value\":false}"
             },
             {
+                "type": "System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089",
+                "key": "SmoothBrush.IgnoreOpenEdges",
+                "value": "{\"m_Value\":true}"
+            },
+            {
                 "type": "UnityEngine.Polybrush.BrushMirror, Unity.Polybrush, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null",
                 "key": "Brush.MirrorAxis",
                 "value": "{\"m_Value\":0}"
@@ -65,6 +70,11 @@
                 "type": "UnityEngine.Polybrush.PolyDirection, Unity.Polybrush, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null",
                 "key": "RaiseLowerBrush.Direction",
                 "value": "{\"m_Value\":0}"
+            },
+            {
+                "type": "UnityEngine.Polybrush.PolyDirection, Unity.Polybrush, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null",
+                "key": "Brush.Direction",
+                "value": "{\"m_Value\":1}"
             },
             {
                 "type": "System.Single, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089",
@@ -99,7 +109,7 @@
             {
                 "type": "UnityEditor.Polybrush.PrefabLoadout, Unity.Polybrush.Editor, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null",
                 "key": "ScatteringEditor.userLoadout",
-                "value": "{\"m_Value\":{\"infos\":[{\"palette\":{\"fileID\":11400000,\"guid\":\"4832e059b1f48ee48b47c4d3f2ced3b1\",\"type\":2},\"prefab\":{\"fileID\":6941765000743290380,\"guid\":\"c60edd51c065ceb46b345849a03bc106\",\"type\":3}},{\"palette\":{\"fileID\":11400000,\"guid\":\"4832e059b1f48ee48b47c4d3f2ced3b1\",\"type\":2},\"prefab\":{\"fileID\":2807449429036958551,\"guid\":\"f0c16f0ea935ea64297ca1d4d55d9746\",\"type\":3}},{\"palette\":{\"fileID\":11400000,\"guid\":\"4832e059b1f48ee48b47c4d3f2ced3b1\",\"type\":2},\"prefab\":{\"fileID\":4661435515762455780,\"guid\":\"e289bf5debb17f6459818c207d781953\",\"type\":3}}]}}"
+                "value": "{\"m_Value\":{\"infos\":[{\"palette\":{\"fileID\":11400000,\"guid\":\"4832e059b1f48ee48b47c4d3f2ced3b1\",\"type\":2},\"prefab\":{\"fileID\":1576488453971893466,\"guid\":\"a778b631c6253a04899cb31bad047c81\",\"type\":3}}]}}"
             }
         ]
     }
